<resources>
    <string name="app_name">JanTune</string>
    <string name="title_login">Login to Your Account.</string>
    <string name="email">Email</string>
    <string name="error_email">The input must be a valid email</string>
    <string name="fake_email">johnsonedoe@gmail.com</string>
    <string name="password">Password</string>
    <string name="fake_password_show">johnsondoe123</string>
    <string name="fake_password_hide">***********************</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="txt_create_account">Don\'t have account? %1$s</string>
    <string name="detail_app_name">JanTune - Early Detection Heart Disease App</string>
    <string name="error_password">Password must be up to 8 characters</string>
    <string name="create_your_account">Create your account!</string>
    <string name="title_register">Create an Account</string>
    <string name="name">Name</string>
    <string name="fake_name">johnsondoe</string>
    <string name="register">Register</string>
    <string name="txt_login_account">Already have an account? %1$s</string>
    <string name="login_your_account">Login to your account!</string>
    <string name="error_name">Name must be up to 4 characters</string>
    <string name="error_login_correct">Please fill the form correctly</string>
    <string name="error_login_empty">The form is empty!! Please fill out the form</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="content_home">Suarakan Kesehatan Jantungmu dengan Early Detection Heart Disease App</string>
    <string name="tes_kardino">Yuk Tes Kardinovaskuler</string>
    <string name="cek_sekarang">Cek Sekarang</string>
    <string name="gejala_content">Gejala Penyakit Jantung</string>
    <string name="gejala">Gejala - Gejala</string>
    <string name="video_edukasi">Video Edukasi</string>
    <string name="lokasi_rs">Lokasi Rumah Sakit</string>
    <string name="identification">Identification</string>
    <string name="new_identification">New Identification</string>
    <string name="negatif_result">Negatif Kardiovaskuler</string>
    <string name="positif_result">Positif Kardiovaskuler</string>
    <string name="history_date">16/11/2023 10:11 AM</string>
    <string name="delete_identification">Delete Identification</string>
    <string name="image_profile">Image Profile</string>
    <string name="fake_phone">081167988232</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="txt_app_version">v1.0.0 (2211)</string>
    <string name="txt_copyright">\@ 2023 Tim Bangkit</string>
    <string name="kontak_kami">Kontak Kami</string>
    <string name="txt_saran">Punya kritik, saran, ide fitur, atau apapun itu yang kamu ingin sampaikan kemapa kami</string>
    <string name="follow_akun">Atau follow akun sosial media kami</string>
    <string name="whatsapp_action">Whatsapp Action</string>
    <string name="gmail_action">Gmail Action</string>
    <string name="instagram_action">Instagram Action</string>
    <string name="twitter_action">Twitter Action</string>
    <string name="gallery_action">Gallery Action</string>
    <string name="error_phone">Please input a valid number phone</string>
    <string name="batal">Batal</string>
    <string name="logout_confirmation">Apakah Anda Yakin Ingin Keluar?</string>
    <string name="tidak">Tidak</string>
    <string name="iya">Ya</string>
    <string name="splash_image">Splash Image</string>
    <string name="identification_form">Identification Form</string>
    <string name="gula_darah_saat_puasa">Gulah Darah Saat Berpuasa</string>
    <string name="fake_gula_darah">0/1</string>
    <string name="submit">Submit</string>
    <string name="txt_detail">Detail :</string>
    <string name="saran_penanganan">Saran Penanganan</string>
    <string name="saran_pencegahan">Saran Pencegahan</string>
    <string name="lokasi">LOKASI RS TERDEKAT</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="edit_profil">Edit Profile</string>
    <string name="fake_date">01/12/2023</string>
    <string name="fake_waktu">00:00 AM</string>
    <string name="identification_detail">Identification Detail</string>
    <string name="cari_lokasi_rs">Cari Rumah Sakit</string>
    <string name="male_gender">Laki-Laki</string>
    <string name="fake_age">25</string>
    <string name="fake_asy">ASY</string>
    <string name="tekanan_darah">Tekanan Darah saat Istirahat</string>
    <string name="fake_tekanan_darah">120</string>
    <string name="elektrokardiogram">Elektrokardiogram saat Istirahat</string>
    <string name="angina">Latihan Angina</string>
    <string name="old_peak">Old Peak</string>
    <string name="kemiringan_st">Kemiringan ST</string>
    <string name="max_hr">Max HR</string>
    <string name="date">Tanggal</string>
    <string name="time">Waktu</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="nyeri_dada">Jenis Nyeri Dada</string>
    <string name="umur">Umur</string>
    <string name="failed_register">Register failed with error:</string>
    <string name="failed_login">Login failed with error:</string>
    <string name="wrong_authentication">Wrong email or password</string>
    <string name="invalid_authentication">Invalid email address or address already registered before</string>
    <string name="register_success_message">Successfully register new account</string>
    <string name="register_failed">Register failed</string>
    <string name="register_success">Register success</string>
    <string name="login_failed">Login Failed</string>
    <string name="ok">OK</string>

    <!-- detail page string resources -->
    <string name="iden_detail_name">Nama : %1$s</string>
    <string name="iden_detail_tanggal">"Tanggal : %1$s"</string>
    <string name="iden_detail_waktu">Waktu : %1$s</string>
    <string name="iden_detail_gender">"Jenis Kelamin : %1$s"</string>
    <string name="iden_detail_age">Umur : %1$s Tahun</string>
    <string name="iden_detail_nyeri_dada">"Jenis Nyeri Dada : %1$s"</string>
    <string name="iden_detail_tekanan_darah">Tekanan Darah saat Istirahat : %1$s</string>
    <string name="iden_detail_kolesterol">"Kolesterol : %1$s"</string>
    <string name="iden_detail_gula_darah">Gula Darah saat Puasa : %1$s</string>
    <string name="iden_detail_elektrokardiogram">Elektrokardiogram saat Istirahat : %1$s</string>
    <string name="iden_detail_angina">Latihan Angina : %1$s</string>
    <string name="iden_detail_old_peak">Old Peak : %1$s</string>
    <string name="iden_detail_kemiringan_st">Kemiringan ST : %1$s</string>
    <string name="iden_detail_max_hr">Max HR : %1$s</string>
    <string name="kolesterol">Kolesterol</string>
</resources>