<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.view.main.profile.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@color/seed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <TextView
                    android:id="@+id/title_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:drawablePadding="8dp"
                    android:text="@string/menu_profile"
                    android:textColor="@color/onSeed"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_profile_active"
                    app:drawableTint="@color/onSeed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_profile"
            style="@style/RoundedCardTopStartEndStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cv_image_profile"
            android:layout_marginTop="75dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="0dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextViewFieldStyle"
                    android:layout_marginBottom="16dp"
                    android:text="@string/fake_name"
                    app:drawableStartCompat="@drawable/ic_profile"
                    app:drawableTint="@color/inputText" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/TextViewFieldStyle"
                    android:layout_marginBottom="16dp"
                    android:text="@string/fake_email"
                    app:drawableStartCompat="@drawable/baseline_email_24"
                    app:drawableTint="@color/inputText" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/TextViewFieldStyle"
                    android:layout_marginBottom="16dp"
                    android:text="@string/fake_phone"
                    app:drawableStartCompat="@drawable/baseline_phone_enabled_24"
                    app:drawableTint="@color/inputText" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/edit"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_edit_24"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rectangle_rounded_shape"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kontak_kami"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_saran"
                        android:textStyle="bold" />

                    <View style="@style/Divider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/btn_iv_whatsapp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/whatsapp_action"
                            android:src="@drawable/whatsapp_icon" />

                        <ImageView
                            android:id="@+id/btn_iv_gmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/gmail_action"
                            android:src="@drawable/gmail_icon" />
                    </LinearLayout>

                    <View style="@style/Divider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/follow_akun"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/btn_iv_instagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/instagram_action"
                            android:src="@drawable/instagram_icon" />

                        <ImageView
                            android:id="@+id/btn_iv_twitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/twitter_action"
                            android:src="@drawable/twitter_icon" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/secondaryButton"
                    android:text="@string/logout"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:icon="@drawable/icon_logout"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconSize="32sp" />

                <TextView
                    android:id="@+id/tv_app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/txt_app_version"
                    android:textColor="@color/inputText" />

                <TextView
                    android:id="@+id/tv_copyright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_copyright"
                    android:textColor="@color/inputText" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_image_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/fl_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-160dp"
            android:translationZ="2dp"
            app:cardCornerRadius="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_profile"
                    android:scaleType="centerCrop"
                    android:src="@drawable/doctor1" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</ScrollView>