<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_gejala"
    android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/history_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/fake_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history_identification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/negatif_result"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/negative_identification"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/history_name"
        app:layout_constraintTop_toBottomOf="@+id/history_name" />

    <TextView
        android:id="@+id/history_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingBottom="16dp"
        android:text="@string/history_date"
        android:fontFamily="@font/roboto_bolditalic"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/history_identification"
        app:layout_constraintTop_toBottomOf="@+id/history_identification" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/delete_identification"
        android:src="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="@+id/history_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/history_name" />

</androidx.constraintlayout.widget.ConstraintLayout>