<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.view.auth.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/seed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo_register"
                    android:layout_width="332dp"
                    android:layout_height="458dp"
                    android:layout_marginTop="-32dp"
                    android:contentDescription="@string/detail_app_name"
                    android:src="@drawable/auth_jantune_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/content_register"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/detail_app_name"
                    android:textColor="@color/onSeed"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_auth_register"
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_card_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_register"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="@+id/edt_email_register"
                    app:layout_constraintTop_toBottomOf="@+id/title_register" />

                <com.jantune.heartdisease.ui.customview.CustomEditTextName
                    android:id="@+id/edt_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="emailAddress"
                    android:drawablePadding="10dp"
                    android:hint="@string/fake_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_register" />

                <TextView
                    android:id="@+id/tv_email_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="@+id/edt_email_register"
                    app:layout_constraintTop_toBottomOf="@+id/edt_name_register" />

                <com.jantune.heartdisease.ui.customview.CustomEditTextEmail
                    android:id="@+id/edt_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="password"
                    android:drawablePadding="10dp"
                    android:hint="@string/fake_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email_register" />

                <TextView
                    android:id="@+id/tv_pass_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="@+id/edt_email_register"
                    app:layout_constraintTop_toBottomOf="@+id/edt_email_register" />

                <com.jantune.heartdisease.ui.customview.CustomEditTextPassword
                    android:id="@+id/edt_pass_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/fake_password_hide"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pass_register" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/register"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_pass_register" />

                <TextView
                    android:id="@+id/tv_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="50dp"
                    android:text="@string/txt_login_account"
                    app:layout_constraintStart_toStartOf="@+id/btn_register"
                    app:layout_constraintTop_toBottomOf="@+id/btn_register" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>